k8s/cartique-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartique-deployment 
spec:
  selector:
    matchLabels:
      app: cartique
  template:
    metadata:
      labels:
        app: cartique
    spec:
      containers:
      - name: cartique
        image: nibrasmuhamed/cartique:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 60000
