k8s/cartique-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartique-service
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 60000
    targetPort: 60000
