k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: cartique-deployment
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cartique-service
            port: 
              number: 60000
